@@ -13,6 +13,7 @@
 	* Re-Implementation of firegpgGPG.listkey(private)
 	* List key in option dialog show only private keys now
 	* Add implementation for show the option dialog with the menu
+	* Class cselect : can now get the selection of texts (not textarea or input)
 
 2007-03-03  Maximilien Cuony
 	* Implementation of firegpgGPG.listkey(private)
